@@ -1,3 +1,7 @@
+2009-04-01  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.c-torture/compile/20090401-1.c: New test.
+
 2009-03-26  Ben Elliston  <bje@au.ibm.com>
 
 	Backport from mainline:
